src/test/deca/context/invalid/decl_field_type_void.deca
// Test la règle 2.5: l'attribut a pour type void.

class A  {
    void variable = 5;
}

// Resultat:
//# TODOTEST  : rule 2.5
